<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Device Info</string>
    
    <string name="label_density_check">Screen Density Check</string>
    <string name="label_size_check">Screen Size Check</string>
    <string name="label_aspect_ratio_check">Aspect Ratio Check</string>
    <string name="label_orientation_check">Screen Orientation Check</string>
    <string name="label_dock_mode_check">Dock Mode Check</string>
    <string name="label_night_mode_check">Night Mode Check</string>
    <string name="label_actual_resolution">Resolution (W X H)</string>
    <string name="label_actual_density">Density (via DisplayMetrics)</string>
    <string name="label_device_info">Device Info</string>
    <string name="label_build_properties">Build Properties</string>
    <string name="label_screen_info">Screen Info</string>
    
</resources>
